# AI_SEO_description_generator

./: .dockerignore  .env  .env.example  .flake8  .gitignore  Dockerfile  LICENSE  README.md  ai_result.json  config.py  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
app/: business_logic.py  celery_app.py  config.py  excel.xlsx  main.py  result.xlsx  run.py  scemas.py  service.py  tasks.py  utils.py
app/ai/: service.py
app/excel/: scemas.py  service.py
app/gsheets/: creds.json  service.py
app/selenium_parse/: service.py
app/utils/: service.py
app/wb/: service.py
excels/: excel.xlsx  result.xlsx
