[tool.poetry]
name = "ai-seo-description-generator"
version = "0.1.0"
description = ""
authors = ["Mark Arkhipychev <hackyourrself@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_seo_description_generator"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
openai = "^0.27.8"
requests = "^2.31.0"
aiohttp = "^3.8.5"
pydantic = "^2.1.1"
pydantic-settings = "^2.0.2"
pyproject-toml = "^0.0.10"
openpyxl = "^3.1.2"
tqdm = "^4.65.0"
google-api-python-client = "^2.95.0"
oauth2client = "^4.1.3"
celery = "^5.3.1"
sqlalchemy = "^2.0.19"
redis = "^4.6.0"
flower = "^2.0.0"
httplib2 = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
