[tool.black]
line-length = 120

[tool.poetry]
name = "ai-seo-description-generator"
version = "1.0.0"
description = ""
authors = ["Mark Arkhipychev <hackyourrself@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.97.0"
oauth2client = "^4.1.3"
sentry-sdk = "^1.29.2"
openai = "^0.27.9"
pydantic-settings = "^2.0.3"
celery = "^5.3.1"
redis = "^5.0.0"
selenium = "^4.11.2"
black = "^23.7.0"
flake8 = "^6.1.0"
flower = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
